docker/deployment/kube-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-deployment
  labels:
    app: kube-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-deployment
  template:
    metadata:
      labels:
        app: kube-deployment
    spec:
      containers:
      - name: nginx-container
        image: gauravjot/projectincloud:simple-html
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deployment-service
spec:
  selector:
    app: kube-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
